master/k8s/ingress/ingress-controller.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ngx-ingress
spec: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ngx-ingress
  name: ngx-ingress-controller
  namespace: ngx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngx-ingress
  template:
    metadata:
      labels:
        app: ngx-ingress
    spec:
      serviceAccountName: ingress
      containers:
        - image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.25.0
          name: nginx-ingress-controller
          args:
          - /nginx-ingress-controller
          - --configmap=$(POD_NAMESPACE)/nginx-configuration
          - --default-backend-service=default/default-http
          ports:
          - name: http
            containerPort: 80
          - name: https
            containerPort: 443
